# libflipper

./: CMakeLists.txt  README.md
include/: GXGeometry.hpp  GXMaterial.hpp
include/geometry/: GXGeometryData.hpp  GXGeometryEnums.hpp  GXVertexData.hpp  GeometryEnums.hpp
include/material/: MaterialEnums.hpp
src/geometry/: GXGeometryData.cpp  GXVertexData.cpp
